tests/valid/arrays/uninitialized_zero_global.rs
/*
compilationExitCode: 0
*/

a: [i64, 3];

main(): i32 {
    return a[0] + a[1] + a[2];
}