tests/invalid/arrays/missing_bracket_sized.rs
/*
compilationExitCode: 2
*/

main(): i32{
    a: [i32, 5;
    return 0;
}